<resources>

    <!-- App Name and Activity Titles -->
    <string name="app_name">Memoir</string>

    <!-- Toolbar Actions -->
    <string name="action_location">Location</string>
    <string name="action_share">Share</string>

    <!-- Titles for Navigation Drawer -->
    <string name="drawer_notes">Notes</string>
    <string name="drawer_calendar">Calendar</string>
    <string name="drawer_atlas">Atlas</string>
    <string name="drawer_tags">Tags</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_about">About</string>

    <string name="title_edit_note">Edit Note</string>
    <string name="view_note_location">Select Location&#8230;</string>
    <string name="view_note_title_hint">Enter title&#8230;</string>
    <string name="view_note_body_hint">Type your note here&#8230;</string>
    <string name="view_note_title">Title</string>
    <string name="note_title_error">Title cannot be empty</string>
    <string name="note_location_enable">Enable location settings</string>
    <string name="note_location_unable">Unable to detect location. Please try again!</string>
    <string name="note_loading">Loading&#8230;</string>
    <string name="note_delete">Delete</string>
    <string name="note_placeholder">Press the + button to\nadd a note</string>
    <string name="location_remove">Remove Location</string>
    <string name="location_detect">Detect Location</string>
    <string name="location_select">Select on Map</string>
    <string name="location_play_error">Error! Unable to connect to Google Play Services.</string>
    <string name="location_wait">Getting current location. Please wait&#8230;</string>
    <string name="login_pass_hint">Password</string>
    <string name="login_error">The password you entered is incorrect!</string>
    <string name="login_button">LOGIN</string>

    <string name="title_about">About</string>
    <string name="version_num">Version 1.0</string>
    <string name="title_settings">Settings</string>
    <string name="settings_pass">Password</string>
    <string name="pass_confirm">Confirm Password</string>
    <string name="pass_enter">Enter Password</string>
    <string name="pass_error_match">Passwords do not match!</string>
    <string name="pass_error_empty">Password cannot be empty</string>
</resources>
